# hauswerk

./: CODE_OF_CONDUCT.md  COMMITS.md  CONTRIBUTING.md  Hauswerk.spec  LICENSE  README.md  README_EN.md  __main__.py  git-cliff.toml  hauswerk.desktop  pyproject.toml  setup.py
core/: ai_assist.py  presets.py  terminal.py  thumbnails.py
docs/: README_DE.md  README_EN.md  README_FR.md  README_ZH.md
resources/themes/: brutal.qss  light.qss  midnight.qss  pastel.qss
widgets/: dashboard.py  ui_builder_with_ai.py
