[project]
name = "hauswerk"
version = "0.0.1"
description = "Visual plugin builder for media tools"
authors = [{name = "M. Ligtenberg"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "opencv-python",
    "Pillow",
    "numpy",
    "ffmpeg-python"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
